teetimes are placed into teetime-containers which are placed into teetime-rows. There are 4 containers per row; overflow and row spacing is correctly handled

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,20 +48,30 @@ form {
     font-family: 'Noto Sans' ,' Poppins' ,sans-serif;
     display: flex;
     flex-wrap: wrap;
+    overflow-y: auto;
+    box-sizing: border-box;
+    align-content: flex-start;
+}
+
+.teetime-row{
+    display: flex;
+    width: 100%;
+    height: 25%;
+    align-items: center;
 }
 
 .teetime-container{
-    width: auto;
-    height: 2rem;
-    margin: 1rem;
+    width: calc(25% - 6rem);
+    height: 3rem;
     border: 3px solid black;
+    margin: 0 3rem;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .missingTeeTimes{
-    width: inherit; 
+    width: 100%; 
     height: inherit;
     display: flex;
     justify-content: center;
